// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Should render a default <Button /> with children 1`] = `
<DocumentFragment>
  <button
    class="button "
  >
    <span
      class="button__content"
      tabindex="-1"
    >
       Developer Experience 
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> Should render a default <Button /> with no children 1`] = `
<DocumentFragment>
  <button
    class="button "
  >
    <span
      class="button__content"
      tabindex="-1"
    />
  </button>
</DocumentFragment>
`;

exports[`<Button /> Should render a disabled <Button /> 1`] = `
<DocumentFragment>
  <button
    class="button button--disabled"
    disabled=""
  >
    <span
      class="button__content"
      tabindex="-1"
    >
       Developer Experience 
    </span>
  </button>
</DocumentFragment>
`;

exports[`<Button /> Should render a toggle <Button /> 1`] = `
<DocumentFragment>
  <button
    aria-pressed="false"
    class="button "
  >
    <span
      class="button__content"
      tabindex="-1"
    >
       Developer Experience 
    </span>
  </button>
</DocumentFragment>
`;
